--- a/templates/root.html
+++ b/templates/root.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="shortcut icon" type="image/png" href="../static/images/favicon.png"/>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primes</title>
@@ -8,9 +9,12 @@
 <form action="#" method="post">
 <body>
     <div class="container">
+        <div id="logo">
+            <img src="../static/images/primesfordays-logo2.png" alt="?">
+        </div>
         <div class="search-bar">
             <div id="select">
-                <p id="selectText">nth prime number</p>
+                <p id="selectText">{{ prev_choice }}</p>
                 <img src="../static/images/arrow.png" alt="?">
                 <ul id="list">
                     <li class="options">nth prime number</li>
@@ -19,7 +23,7 @@
                     <li class="options">primality test</li>
                 </ul>
             </div>
-            <label for="inputField"></label><input type="text" id="inputField" placeholder="Search for nth prime number" name="n">
+            <label for="inputField"></label><input type="text" id="inputField" placeholder="Search for {{ prev_choice }}" name="n">
             <button id="search-button">
                 <img src="../static/images/search.png">
             </button>
@@ -28,7 +32,7 @@
             <h1>{{ display }}</h1>
         </div>
     </div>
-    <input type="hidden" id="select_id" name="select_choice" value="nth prime number" />
+    <input type="hidden" id="select_id" name="select_choice" value="{{ prev_choice }}" />
 
 <script>
     let select = document.getElementById("select");
@@ -46,6 +50,9 @@
         option.onclick = function () {
             selectText.innerHTML = this.innerHTML;
             inputField.placeholder = "Search for " + selectText.innerHTML;
+            if (selectText.innerHTML == "primes from n to m"){
+                inputField.placeholder += " in form n, m"
+            }
             selectValue.value = selectText.innerHTML
         }
     }
