--- a/templates/api.html
+++ b/templates/api.html
@@ -15,7 +15,7 @@
         <script>
           document.getElementById("logo").addEventListener("click", function(event) {
             event.preventDefault();
-            window.location.href = "http://127.0.0.1:5000/ ";
+            window.location.href = "https://www.primesfordays.com";
           });
         </script>
 
