--- a/templates/api.html
+++ b/templates/api.html
@@ -3,6 +3,7 @@
     <link rel="shortcut icon" type="image/png" href="../static/images/favicon.png"/>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#2E294E" />
         <title>API</title>
         <link rel="stylesheet" href="../static/css/api_styles.css">
     </head>
